Remove default outline indent, fixes tdf#95576

The default document outline style has indents set appropriately for
numbered headings.  However numbering was disabled in the default
outline style 20 years ago (!) so update the indents accordingly.

Also revert commit 05fd8cb848ecba425124d61cd76e2f9418d5378c which
attempted to work around this issue by explicitly setting a zero indent
on the default paragraph styles "Heading 1", "Heading 2", etc, as this
is no longer required.

This change fixes a DOC import issue tdf#95576

(!) Reference: see this old German comment
https://cgit.freedesktop.org/libreoffice/core/tree/sw/source/core/doc/number.cxx?id=84a3db80#n647

Change-Id: Id289143ed859861f2584e21969f16f348e215f6f